--- a/index.html
+++ b/index.html
@@ -337,7 +337,13 @@
 	<!-- ./Product daily-deal -->
 	<!-- List product -->
 	<div class="heading-section text-center margin-top-85 wow fadeInLeft">
-		<h3 class="title">Our Products</h3>
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<script>
+		  (adsbygoogle = window.adsbygoogle || []).push({
+			google_ad_client: "ca-pub-7600503495422229",
+			enable_page_level_ads: true
+		  });
+		</script>
 	</div>
 	<div class="section-our-product wow fadeInUp">
 		<div class="container">
@@ -556,7 +562,13 @@
 	<!-- ./Section Services -->
 	<!-- Section SPECIAL LOOK!-->
 	<div class="heading-section text-center margin-top-90 wow fadeInRight">
-		<h3 class="title">SPECIAL LOOK!</h3>
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<script>
+		  (adsbygoogle = window.adsbygoogle || []).push({
+			google_ad_client: "ca-pub-7600503495422229",
+			enable_page_level_ads: true
+		  });
+		</script>
 	</div>
 	<div class="container wow fadeIn">
 		<div class="row margin-0">
@@ -593,7 +605,13 @@
 	<!-- ./Section SPECIAL LOOK!-->
 	<!-- Section blog -->
 	<div class="heading-section text-center margin-top-85 wow fadeInLeft">
-		<h3 class="title">FROM OUR BLOG</h3>
+		<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+		<script>
+		  (adsbygoogle = window.adsbygoogle || []).push({
+			google_ad_client: "ca-pub-7600503495422229",
+			enable_page_level_ads: true
+		  });
+		</script>
 	</div>
 	<div class="section-last-test-blog margin-bottom-90 wow zoomIn">
 		<div class="container">
